# filesoup

./: 0-AI-MANIFEST.a2ml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  ECOSYSTEM.scm  EXPLAINME.adoc  Justfile  MAINTAINERS.md  META.scm  PROJECT_SUMMARY.md  PROOF-NEEDS.md  QUICKSTART-DEV.adoc  QUICKSTART-MAINTAINER.adoc  QUICKSTART-USER.adoc  README.adoc  README.md  ROADMAP.adoc  RSR_COMPLIANCE.adoc  SECURITY.md  STATE.scm  TEST-NEEDS.md  TOPOLOGY.md  flake.nix  guix.scm  llm-warmup-dev.md  llm-warmup-user.md  selur-compose.toml  setup.sh  stapeln.toml
.claude/: CLAUDE.md  PROJECT.md
.github/workflows/: ci.yml  codeql.yml  dogfood-gate.yml  mirror.yml  (+12 more)
.hypatia/: activity.jsonl  last-visit.json
.machine_readable/: ADJUST.contractile  CLADE.a2ml  ECOSYSTEM.scm  INTENT.contractile  META.a2ml  META.scm  MUST.contractile  STATE.a2ml  STATE.scm  TRUST.contractile
.well-known/: security.txt
docs/: CITATIONS.adoc  PLUGIN_DEVELOPMENT.md  QUICKSTART.md  RSR_COMPLIANCE.md  TPCF.md  architecture.adoc  contributing.adoc  tech-debt-2026-05-26.md  troubleshooting.adoc  usage.adoc
file-soup/: CHANGELOG.adoc  README.adoc  ROADMAP.adoc  eclexiaiser.toml
fslint-plugin-api/: 0-AI-MANIFEST.a2ml  CONTRIBUTING.md  Cargo.toml
fslint-plugin-api/.github/workflows/: rust-ci.yml
fslint-plugin-api/.machine_readable/6a2/: ECOSYSTEM.a2ml  META.a2ml  STATE.a2ml
fslint-plugin-sdk/: 0-AI-MANIFEST.a2ml  CONTRIBUTING.md  Cargo.toml
fslint-plugin-sdk/.machine_readable/6a2/: ECOSYSTEM.a2ml  META.a2ml  STATE.a2ml
fslint-plugin-sdk/src/: lib.rs
(+53 files in other folders)
